# Robot-Operating-System

./: README.md  turtlebot3_myworld.world
AMCL/turtlebot3_navigation/maps/: map.pgm  map.yaml
AMCL/turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
A_STAR/: astarprocess.cpp
Quadcopter/: quadcopter_world.sdf
ROS2-based Bin-Picking System: Integrating RGB and Point Cloud Data for Object Detection, Pose Estimation, and Grasp Planning/Robot/: cobot_with_camera.urdf.xacro
ROS2-based Bin-Picking System: Integrating RGB and Point Cloud Data for Object Detection, Pose Estimation, and Grasp Planning/Robot/Mid_work/: README.md  cobot_with_camera.urdf.xacro
ROS2-based Bin-Picking System: Integrating RGB and Point Cloud Data for Object Detection, Pose Estimation, and Grasp Planning/Robot/Mid_work/basic_robot/: CMakeLists.txt  package.xml
ROS2-based Bin-Picking System: Integrating RGB and Point Cloud Data for Object Detection, Pose Estimation, and Grasp Planning/Robot/Mid_work/basic_robot/launch/: robot_state_publisher.launch.py  simple_wrold_launch.launch.py  swap_robot_launch.launch.py
ROS2-based Bin-Picking System: Integrating RGB and Point Cloud Data for Object Detection, Pose Estimation, and Grasp Planning/Robot/Mid_work/basic_robot/worlds/: world_with_camera.world
ROS2-based Bin-Picking System: Integrating RGB and Point Cloud Data for Object Detection, Pose Estimation, and Grasp Planning/Robot/Mid_work/my_robot_controller/: package.xml  setup.py
(+11 files in other folders)
